--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -58,17 +58,15 @@
     align-items: center;
     border: 2px solid black;
     border-radius: 20px;
-    transition: background-color 0.1s ease, box-shadow 0.1s ease;
 
   }
 
   .hero-button:active {
     background-color: #ee7772;
-    box-shadow: 0px 0px 0px 0.1875rem #ee7772/* 3px -> 0.1875rem */
+    border: 2px solid #ee7772;
 }
 
   .hero-button-text{
-    transition: background-color 0.1s ease, color 0.1s ease;
   }
 
   .hero-button-text:active{
